--- a/.github/workflows/container-registry.yml
+++ b/.github/workflows/container-registry.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Build and push the image
         run: |
           docker login --username eebridge --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/eebridge/lab10:latest --file Dockerfile .  
-          docker push ghcr.io/eebridge/lab10:latest 
+          docker build -t ghcr.io/eebridge/ducks-service:latest --file Dockerfile .  
+          docker push ghcr.io/eebridge/ducks-service:latest 
 
